--- a/package.json
+++ b/package.json
@@ -35,8 +35,18 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
+    "postcss-convert-values": "^2.6.1",
     "postcss-cssnext": "^2.10.0",
-    "sass-module-importer": "^1.4.0",
+    "postcss-discard-comments": "^2.0.4",
+    "postcss-discard-duplicates": "^2.1.0",
+    "postcss-discard-empty": "^2.1.0",
+    "postcss-discard-unused": "^2.2.3",
+    "postcss-merge-idents": "^2.1.7",
+    "postcss-merge-longhand": "^3.0.0",
+    "postcss-merge-selectors": "0.0.6",
+    "postcss-minify-font-values": "^1.0.5",
+    "postcss-minify-selectors": "^2.1.1",
+    "postcss-normalize-charset": "^1.1.1",
     "stylelint": "^7.9.0",
     "stylelint-config-standard": "^16.0.0"
   },
