--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   "homepage": "https://github.com/ndchristie/bui#readme",
   "devDependencies": {
     "cssnano": "^3.10.0",
-    "del": "^2.2.2",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-plugin-import": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-postcss": "^6.4.0",
     "gulp-rename": "^1.2.2",
