--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "npm run dev",
     "test": "gulp test",
     "dev": "gulp css:watch",
-    "build": "gulp css:min"
+    "build": "gulp css:min",
+    "release": "standard-version"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
   "homepage": "https://github.com/ndchristie/bui#readme",
   "devDependencies": {
     "cssnano": "^3.10.0",
+    "cz-conventional-changelog": "^2.1.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
@@ -51,10 +53,16 @@
     "postcss-minify-font-values": "^1.0.5",
     "postcss-minify-selectors": "^2.1.1",
     "postcss-normalize-charset": "^1.1.1",
+    "standard-version": "^4.3.0",
     "stylelint": "^7.9.0",
     "stylelint-config-standard": "^16.0.0"
   },
   "files": [
     "lib/"
-  ]
+  ],
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
