build(Release script): Force build to run before release to ensure up-to-date lib/ files

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "gulp test",
     "dev": "gulp css:watch",
     "build": "gulp css:min",
-    "release": "standard-version"
+    "release": "npm run build && standard-version"
   },
   "repository": {
     "type": "git",
